--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shared Bookmarks</title>
     <!-- <script type="module" src="script.js"></script> -->
-    <script type="module" src="script.js"></script>
+    <script type="module" src="script.js" defer></script>
 </head>
 <body>
     <h1>Shared Bookmarks</h1>
